fix: minor issue with width on mobile screen

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -170,6 +170,7 @@ footer {
   background-color: var(--accent);
   padding: 1.5rem 0;
   margin-bottom: 1.5rem;
+  width:100%; 
 }
 
 .site-header .container {
